syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_process_definition;

message DsProcessDefinitionBean {

     int32  id=1 ;
     int64  code= 2;
     optional string  name=3 ;
     int32  version=4 ;
     optional string   description=5 ;
     optional int64    project_code=6 ;
     optional int32   release_state=7 ;
     optional int32   user_id=8 ;
     optional string    global_params=9 ;
     optional string    locations=10 ;
     optional int32    warning_group_id=11 ;
     optional int32    flag=12 ;
     optional int32    timeout=13 ;
     optional int32     tenant_id=14 ;
     optional int32    execution_type=15 ;
     optional string    create_time=16 ;
     optional string   update_time=17 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsProcessDefinitionBeanService {
  rpc ListDsProcessDefinitionBeans(ListDsProcessDefinitionBeansRequest) returns (ListDsProcessDefinitionBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsProcessDefinitionBeans"
    };
  }

  rpc GetDsProcessDefinitionBean(GetDsProcessDefinitionBeanRequest) returns (DsProcessDefinitionBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsProcessDefinitionBeans/*}"
    };
  }

  rpc CreateDsProcessDefinitionBean(CreateDsProcessDefinitionBeanRequest) returns (DsProcessDefinitionBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsProcessDefinitionBeans"
      body: "DsProcessDefinitionBean"
    };
  }

  rpc UpdateDsProcessDefinitionBean(UpdateDsProcessDefinitionBeanRequest) returns (DsProcessDefinitionBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsProcessDefinitionBean.name=DsProcessDefinitionBeans/*}"
      body: "DsProcessDefinitionBean"
    };
  }

  rpc DeleteDsProcessDefinitionBean(DeleteDsProcessDefinitionBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsProcessDefinitionBeans/*}"
    };
  }
}

// message DsProcessDefinitionBean {
// ! This should be defined elsewhere
// }

message ListDsProcessDefinitionBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsProcessDefinitionBeansResponse {
  // The field name should match the noun "DsProcessDefinitionBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsProcessDefinitionBean DsProcessDefinitionBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsProcessDefinitionBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsProcessDefinitionBeanRequest {
  // The parent resource name where the DsProcessDefinitionBean is to be created.
  string parent = 1;

  // The DsProcessDefinitionBean id to use for this DsProcessDefinitionBean.
  string DsProcessDefinitionBean_id = 2;

  // The DsProcessDefinitionBean resource to create.
  // The field name should match the Noun in the method name.
  DsProcessDefinitionBean DsProcessDefinitionBean = 3;
}

message UpdateDsProcessDefinitionBeanRequest {
  // The DsProcessDefinitionBean resource which replaces the resource on the server.
  DsProcessDefinitionBean DsProcessDefinitionBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsProcessDefinitionBeanRequest {
  // The resource name of the DsProcessDefinitionBean to be deleted.
  string name = 1;
}
